--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "lnug.github.io",
   "main": "build.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "update": "./bin/update-json.js",
+    "homepage": "./bin/build-homepage.js",
+    "archive": "./bin/build-archive.js",
+    "start": "mongoose .",
+    "build": "npm run update && npm run homepage && npm run archive"
   },
   "repository": {
     "type": "git",
@@ -17,6 +22,11 @@
   },
   "homepage": "https://github.com/lnug/lnug.github.io",
   "devDependencies": {
-    "sizlate": "^0.9.0"
+    "async": "^1.3.0",
+    "lodash": "^3.10.0",
+    "marked": "^0.3.3",
+    "moment": "^2.10.3",
+    "sizlate": "^0.9.0",
+    "superagent": "^1.2.0"
   }
 }
